--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -100,6 +100,7 @@
             "title": "Управление аккаунтом",
             "unlockAll": "Разблокировать все",
             "maxAll": "Максимизировать все",
+            "getAll": "Получить все",
             "buttons": {
                 "characters": "Персонажи",
                 "collectibles": "Коллекции",
@@ -107,7 +108,10 @@
                 "pets": "Питомцы",
                 "characterLevel": "Уровень персонажа",
                 "characterRank": "Ранг персонажа",
-                "characterTalent": "Талант персонажа"
+                "characterTalent": "Талант персонажа",
+                "mission": "Миссия",
+                "tutorial": "Туториал",
+                "rogue": "Симуляция"
             }
         },
         "messages": {
@@ -125,7 +129,10 @@
                 "pets": "Все питомцы разблокированы",
                 "characterLevel": "Все персонажи установлены на максимальный уровень",
                 "characterRank": "Все персонажи установлены на максимальный ранг",
-                "characterTalent": "Все персонажи установлены на максимальный талант"
+                "characterTalent": "Все персонажи установлены на максимальный талант",
+                "mission": "Все миссии разблокированы",
+                "tutorial": "Все туториалы разблокированы",
+                "rogue": "Все миссии Симуляции разблокированы"
             }
         }
     },
