--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -99,6 +99,7 @@
         "controls": {
             "title": "การควบคุมบัญชี",
             "unlockAll": "ปลดล็อกทั้งหมด",
+            "getAll": "ดึงทั้งหมด",
             "maxAll": "สูงสุดทั้งหมด",
             "buttons": {
                 "characters": "ตัวละคร",
@@ -107,7 +108,10 @@
                 "pets": "สัตว์เลี้ยง",
                 "characterLevel": "ระดับตัวละคร",
                 "characterRank": "อันดับตัวละคร",
-                "characterTalent": "พรสวรรค์ตัวละคร"
+                "characterTalent": "พรสวรรค์ตัวละคร",
+                "mission": "ภารกิจ",
+                "tutorial": "การสอน",
+                "rogue": "จักรวาลจำลอง"
             }
         },
         "messages": {
@@ -125,7 +129,10 @@
                 "pets": "ปลดล็อกสัตว์เลี้ยงทั้งหมดแล้ว",
                 "characterLevel": "ตั้งค่าระดับตัวละครทั้งหมดเป็นสูงสุดแล้ว",
                 "characterRank": "ตั้งค่าอันดับตัวละครทั้งหมดเป็นสูงสุดแล้ว",
-                "characterTalent": "ตั้งค่าพรสวรรค์ตัวละครทั้งหมดเป็นสูงสุดแล้ว"
+                "characterTalent": "ตั้งค่าพรสวรรค์ตัวละครทั้งหมดเป็นสูงสุดแล้ว",
+                "mission": "ปลดล็อกภารกิจทั้งหมดแล้ว",
+                "tutorial": "ปลดล็อกการสอนทั้งหมดแล้ว",
+                "rogue": "ปลดล็อกภารกิจจักรวาลจำลองทั้งหมดแล้ว"
             }
         }
     },
