--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -48,7 +48,14 @@
             },
             "errors": {
                 "saveFailed": "Gagal menyimpan relik",
-                "maxLevels": "Total level peningkatan afiks tambahan tidak boleh melebihi 5 (saat ini: {{total}})"
+                "maxLevels": "Total level peningkatan afiks tambahan tidak boleh melebihi 5 (saat ini: {{total}})",
+                "invalidRelics": "Beberapa relik memiliki konfigurasi yang tidak valid. Setiap afiks tambahan harus berada antara level 1-5 dan total level harus 8 atau 9.",
+                "recommendFailed": "Gagal mendapatkan relik yang direkomendasikan"
+            },
+            "messages": {
+                "saveSuccess": "Relik berhasil disimpan",
+                "saveAllSuccess": "Semua relik berhasil disimpan",
+                "recommendSuccess": "Relik direkomendasikan berhasil dimuat"
             }
         },
         "basicInfo": {
