--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -48,7 +48,14 @@
             },
             "errors": {
                 "saveFailed": "Не удалось сохранить реликвии",
-                "maxLevels": "Общий уровень улучшения дополнительных аффиксов не может превышать 5 (текущий: {{total}})"
+                "maxLevels": "Общий уровень улучшения дополнительных аффиксов не может превышать 5 (текущий: {{total}})",
+                "invalidRelics": "Некоторые реликвии имеют недопустимые конфигурации. Каждый дополнительный аффикс должен быть между уровнем 1-5, и общий уровень должен быть 8 или 9.",
+                "recommendFailed": "Не удалось получить рекомендуемые реликвии"
+            },
+            "messages": {
+                "saveSuccess": "Реликвии успешно сохранены",
+                "saveAllSuccess": "Все реликвии успешно сохранены",
+                "recommendSuccess": "Рекомендуемые реликвии успешно загружены"
             }
         },
         "basicInfo": {
