--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -48,7 +48,14 @@
             },
             "errors": {
                 "saveFailed": "การบันทึกวัตถุโบราณล้มเหลว",
-                "maxLevels": "ระดับการอัปเกรดรองทั้งหมดต้องไม่เกิน 5 (ปัจจุบัน: {{total}})"
+                "maxLevels": "ระดับการอัปเกรดรองทั้งหมดต้องไม่เกิน 5 (ปัจจุบัน: {{total}})",
+                "invalidRelics": "บางวัตถุโบราณมีการตั้งค่าไม่ถูกต้อง กรุณาตรวจสอบอีกครั้ง",
+                "recommendFailed": "การรับวัตถุโบราณที่แนะนำล้มเหลว"
+            },
+            "messages": {
+                "saveSuccess": "วัตถุโบราณถูกบันทึกเรียบร้อย",
+                "saveAllSuccess": "วัตถุโบราณทั้งหมดถูกบันทึกเรียบร้อย",
+                "recommendSuccess": "วัตถุโบราณที่แนะนำถูกรับเรียบร้อย"
             }
         },
         "basicInfo": {
