--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -48,7 +48,14 @@
             },
             "errors": {
                 "saveFailed": "Lưu di vật thất bại",
-                "maxLevels": "Tổng cấp độ nâng cấp phụ không thể vượt quá 5 (hiện tại: {{total}})"
+                "maxLevels": "Tổng cấp độ nâng cấp phụ không thể vượt quá 5 (hiện tại: {{total}})",
+                "invalidRelics": "Một số di vật có cấu hình không hợp lệ. Mỗi phụ thêm phải nằm giữa cấp 1-5 và tổng cấp phải là 8 hoặc 9.",
+                "recommendFailed": "Không thể nhận di vật được đề xuất"
+            },
+            "messages": {
+                "saveSuccess": "Di vật đã được lưu thành công",
+                "saveAllSuccess": "Tất cả di vật đã được lưu thành công",
+                "recommendSuccess": "Di vật được đề xuất đã được tải"
             }
         },
         "basicInfo": {
