--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,7 +49,14 @@
             },
             "errors": {
                 "saveFailed": "Failed to save relics",
-                "maxLevels": "Total sub affix upgrade levels cannot exceed 5 (current: {{total}})"
+                "maxLevels": "Total sub affix upgrade levels cannot exceed 5 (current: {{total}})",
+                "invalidRelics": "Some relics have invalid configurations. Each sub affix must be between level 1-5 and total levels must be 8 or 9.",
+                "recommendFailed": "Failed to get relic recommendations"
+            },
+            "messages": {
+                "saveSuccess": "Relic saved successfully",
+                "saveAllSuccess": "All relics saved successfully",
+                "recommendSuccess": "Recommended relics loaded"
             }
         },
         "basicInfo": {
