--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -48,9 +48,9 @@
             },
             "errors": {
                 "saveFailed": "遺物の保存に失敗しました",
-                "maxLevels": "サブアフィックスの合計レベルは5を超えることはできません（現在: {{total}}）",
-                "invalidRelics": "いくつかの遺物の設定が無効です。各サブアフィックスは1から5のレベルでなければならず、合計レベルは8または9でなければなりません。",
-                "recommendFailed": "推奨遺物の取得に失敗しました"
+                "invalidRelics": "いくつかの遺物の設定が無効です。各サブアフィックスは1から6のレベルでなければならず、合計レベルは8または9でなければなりません。",
+                "recommendFailed": "推奨遺物の取得に失敗しました",
+                "invalidLevels": "サブアフィックスの合計レベルは8または9でなければなりません（現在: {{level}}）"
             },
             "messages": {
                 "saveSuccess": "遺物が正常に保存されました",
