--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -48,9 +48,9 @@
             },
             "errors": {
                 "saveFailed": "Не удалось сохранить реликвии",
-                "maxLevels": "Общий уровень улучшения дополнительных аффиксов не может превышать 5 (текущий: {{total}})",
-                "invalidRelics": "Некоторые реликвии имеют недопустимые конфигурации. Каждый дополнительный аффикс должен быть между уровнем 1-5, и общий уровень должен быть 8 или 9.",
-                "recommendFailed": "Не удалось получить рекомендуемые реликвии"
+                "invalidRelics": "Некоторые реликвии имеют недопустимые конфигурации. Каждый дополнительный аффикс должен быть между уровнем 1-6, и общий уровень должен быть 8 или 9.",
+                "recommendFailed": "Не удалось получить рекомендуемые реликвии",
+                "invalidLevels": "Общий уровень дополнительных аффиксов должен быть 8 или 9 (текущий: {{level}})"
             },
             "messages": {
                 "saveSuccess": "Реликвии успешно сохранены",
