--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -48,9 +48,9 @@
             },
             "errors": {
                 "saveFailed": "การบันทึกวัตถุโบราณล้มเหลว",
-                "maxLevels": "ระดับการอัปเกรดรองทั้งหมดต้องไม่เกิน 5 (ปัจจุบัน: {{total}})",
-                "invalidRelics": "บางวัตถุโบราณมีการตั้งค่าไม่ถูกต้อง กรุณาตรวจสอบอีกครั้ง",
-                "recommendFailed": "การรับวัตถุโบราณที่แนะนำล้มเหลว"
+                "invalidRelics": "บางวัตถุโบราณมีการตั้งค่าไม่ถูกต้อง ทุกรองต้องอยู่ระหว่างระดับ 1-6 และรวมระดับต้องเป็น 8 หรือ 9",
+                "recommendFailed": "การรับวัตถุโบราณที่แนะนำล้มเหลว",
+                "invalidLevels": "รวมระดับของคุณเพิ่มเติมต้องเป็น 8 หรือ 9 (ปัจจุบัน: {{level}})"
             },
             "messages": {
                 "saveSuccess": "วัตถุโบราณถูกบันทึกเรียบร้อย",
