--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -48,9 +48,9 @@
             },
             "errors": {
                 "saveFailed": "Échec de l'enregistrement des reliques",
-                "maxLevels": "Le total des niveaux d'amélioration des affixes secondaires ne peut pas dépasser 5 (actuel : {{total}})",
-                "invalidRelics": "Certaines reliques ont des configurations invalides. Chaque affixe secondaire doit être entre niveau 1-5 et le total des niveaux doit être 8 ou 9.",
-                "recommendFailed": "Échec de la récupération des reliques recommandées"
+                "invalidRelics": "Certaines reliques ont des configurations invalides. Chaque affixe secondaire doit être entre niveau 1-6 et le total des niveaux doit être 8 ou 9.",
+                "recommendFailed": "Échec de la récupération des reliques recommandées",
+                "invalidLevels": "Le total des niveaux d'affixes secondaires doit être 8 ou 9 (actuel : {{level}})"
             },
             "messages": {
                 "saveSuccess": "Relique enregistrée avec succès",
