--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -48,9 +48,9 @@
             },
             "errors": {
                 "saveFailed": "유물 저장 실패",
-                "maxLevels": "부 옵션 업그레이드 레벨의 총합은 5를 초과할 수 없습니다 (현재: {{total}})",
-                "invalidRelics": "유물 설정이 유효하지 않습니다. 각 부 옵션은 1-5 레벨이어야 하며, 총 레벨은 8 또는 9여야 합니다.",
-                "recommendFailed": "추천 유물 얻기 실패"
+                "invalidRelics": "유물 설정이 유효하지 않습니다. 각 부 옵션은 1-6 레벨이어야 하며, 총 레벨은 8 또는 9여야 합니다.",
+                "recommendFailed": "추천 유물 얻기 실패",
+                "invalidLevels": "부 옵션 총 레벨은 8 또는 9여야 합니다 (현재: {{level}})"
             },
             "messages": {
                 "saveSuccess": "유물이 성공적으로 저장되었습니다",
